<resources>
    <string name="app_name">Mining calculator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mining_profitability_calculator">Mining profitability calculator</string>
    <string name="enter_hashrate">Enter hashrate</string>
    <string name="h_s">H/s</string>
    <string name="select_your_device">Select your device</string>
    <string name="hashing_power">Hashing Power</string>
    <string name="power_consumption">Power consumption</string>
    <string name="usd">$</string>
    <string name="usd1">USD</string>
    <string name="w">W</string>
    <string name="cost_per_kwh">Cost per KWh</string>
    <string name="pool_fee">Pool fee</string>
    <string name="percent">%</string>
    <string name="calculate">Calculate</string>
    <string name="_2000">2000</string>
    <string name="_200">200</string>
    <string name="_0_1">0.1</string>
    <string name="_1">1</string>
    <string name="select_mining_algo">Select Mining Algo</string>
    <string name="all_other_cryptonight_algos_will_be_auto_calculated">all other cryptonight algos will be auto
        calculated
    </string>
    <string name="calculate_rig">calculate your rig</string>
    <string name="clear_all">clear</string>
    <string name="_0_devices">0 devices</string>
    <string name="build_your_rig">Build your rig:</string>
    <string name="select_vendor">Select vendor</string>
    <string name="dashboard">Dashboard</string>
    <string name="hardware">Hardware</string>
    <string name="coins">Coins</string>
    <string name="home">Home</string>
    <string name="support_project">Support project</string>
    <string name="feedback">Send feedback</string>
    <string name="btc_wallet">bc1q77ghqfdkudpz8tgx4sdmfff5vfex7xzpw6rpkc</string>
    <string name="donation_text">Big thanks to everyone who has supported this free project! If you want to make a
        donation, you can send me email in the feedback section or you can help us by watching Ads.
        Your support is hugely appreciated!
    </string>
    <string name="awesome_donators">Awesome Donators:​</string>
    <string name="app_id">ca-app-pub-1501215034144631~1229746060</string>
    <string name="banner_id">ca-app-pub-1501215034144631/4742326103</string>
    <string name="interstitial_id">ca-app-pub-1501215034144631/8206040347</string>
    <string name="rewarded_id">ca-app-pub-1501215034144631/4203406411</string>
    <string name="load_config">load</string>
    <string name="save_config">save</string>
    <string name="coins_not_found">Coins not found</string>
    <string name="please_add_device">Please try to add some devices</string>
    <string name="Rigamd">RIGAMD</string>
    <string name="config_list_empty">Configuration list is empty</string>
    <string name="select_rig_config">Select your Rig config</string>
    <string name="load">Load</string>
    <string name="config_loaded">Configuration loaded</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="config_deleted">Configuration deleted</string>
    <string name="RIG">RIG</string>
    <string name="please_fill_all_fields">Please fill in ALL the fields</string>
    <string name="OK">OK</string>
    <string name="HashSec">H/s</string>
    <string name="video_not_ready_yet">Video not ready yet</string>
    <string name="thanks_for_watching">Thanks for watching video and your support. Have a nice day!</string>
    <string name="interstitial_not_loaded_yet">The interstitial wasn\'t loaded yet.</string>
    <string name="text_email">text/email</string>
    <string name="my_email">developer.alexandr.lebedev@gmail.com</string>
    <string name="feedback_mining_app">Feedback Mining Calculator App</string>
    <string name="dear_me">Dear Alexandr Lebedev,</string>
    <string name="send_feedback">Send Feedback:</string>
    <string name="getting_asic_profitability">getting asic profitability</string>
    <string name="getting_rig_amd_prifitability">getting RIG AMD profitability</string>
    <string name="mining_profit_calculator">\  Mining profit calculator</string>
    <string name="press_back_again_to_exit">Press BACK again to exit</string>
    <string name="devices">\ devices</string>
    <string name="cleared">Cleared</string>
    <string name="configuration_name">configuration name</string>
    <string name="save_this_config">Save this configuration?</string>
    <string name="save">Save</string>
    <string name="please_enter_config_name">Please enter configuration name</string>
    <string name="configuration_saved">Configuration saved</string>
    <string name="save_this_configuration">Save this configuration?</string>
    <string name="config_saved">Configuration saved</string>
    <string name="gpu_mining">GPU Mining</string>
    <string name="cpu_mining">CPU Mining</string>
    <string name="asic_mining">ASIC Mining</string>
    <string name="select_mining_device">Select mining device</string>
    <string name="kwh">$/kWh</string>
    <string name="ethereum">Ethereum</string>
    <string name="algo_cryptonight_r">Algo: Cryptonight R</string>
    <string name="_10000_mh_s">10000 Mh/s</string>
    <string name="cryptocurrency_mining_calculator">CryptoCurrency \n\n Mining Calculator</string>
    <string name="coin_chart">Coin Chart</string>
    <string name="m1">M1</string>
    <string name="m5">M5</string>
    <string name="m15">M15</string>
    <string name="m30">M30</string>
    <string name="h1">H1</string>
    <string name="h6">H6</string>
    <string name="h12">H12</string>
    <string name="d1">D1</string>
    <string name="name">name:</string>
    <string name="name_upper_letter">Name</string>
    <string name="symbol">symbol:</string>
    <string name="price">price:</string>
    <string name="average_price">Average price:</string>
    <string name="supply">supply:</string>
    <string name="max_supply">Max supply:</string>
    <string name="market_cap_in_usd">Market cap in Usd:</string>
    <string name="volume_in_24h_in_usd">Volume in 24H in Usd:</string>
    <string name="percent_change_in_24h">Percent change in 24H:</string>
    <string name="name_chart">Name:</string>
    <string name="symbol_chart">Symbol:</string>
    <string name="price_chart">Price:</string>
    <string name="daily_average_price_chart">Daily Average price:</string>
    <string name="supply_chart">Supply:</string>
    <string name="max_supply_chart">Max supply:</string>
    <string name="market_cap_chart">Market cap in Usd:</string>
    <string name="volume_in_24h_chart">Volume in 24H in Usd:</string>
    <string name="trading_volume_is_low_better_switch_to_other_coins">Trading volume is low! Better switch to other coins.</string>
    <string name="look_for_coin">Look for coin…</string>
    <string name="mining_pools">Mining Pools:</string>
    <string name="average_pool_fee">Average fee: </string>
    <string name="pools_not_found">Pools not found</string>
    <string name="sort_by">Sort by:</string>
    <string name="fee">Fee</string>
    <string name="rating">Rating</string>
    <string name="volume_in_24h">Volume in 24h:\u0020</string>
    <string name="average_pool_rating">Average pool rating:</string>
    <string name="pool_supports_mining_of_these_coins">Pool supports mining of these coins:</string>
    <string name="website">Website:</string>
    <string name="payment_type">Payment type:</string>
    <string name="server_location">Server location:</string>
    <string name="you_can_rate_this_pool">You can rate this pool</string>
    <string name="contact_us"><u>Contact us via Email</u></string>
    <string name="did_not_find_your_pool">Did not find your pool?</string>
    <string name="cryptocurrency">CryptoCurrency</string>
    <string name="mining_calculator">Mining Calculator</string>
</resources>
