<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="8dp"
                android:text="@string/select_your_device"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
                android:id="@+id/gpuLayout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text_shape"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message">

            <ImageView

                    android:id="@+id/gpuImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/gpu_animated" />

        </LinearLayout>


        <LinearLayout
                android:id="@+id/cpuLayout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text_shape"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message">

            <ImageView
                    android:id="@+id/cpuImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/cpu_animated" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/asicLayout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text_shape"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message">

            <ImageView
                    android:id="@+id/asicImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/asic_animated" />

        </LinearLayout>


        <TextView
                android:id="@+id/gpuMiningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/gpu_mining"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gpuLayout" />


        <TextView
                android:id="@+id/cpuMiningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/cpu_mining"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gpuLayout" />

        <TextView
                android:id="@+id/asicMiningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/asic_mining"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.92"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gpuLayout" />


        <Button
                android:id="@+id/algoSelectorButton"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/miningalgo_selector"
                android:drawableEnd="@drawable/dropdownlist"
                android:enabled="false"
                android:text="@string/select_mining_device"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@+id/gpuMiningText" />

        <TextView
                android:id="@+id/cryptonightInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/all_other_cryptonight_algos_will_be_auto_calculated"
                android:textColor="@color/red_info"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/algoSelectorButton" />

        <EditText
                android:id="@+id/hashrateEditText"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/hashing_power"
                android:inputType="numberDecimal"
                android:text="@string/_2000"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/algoSelectorButton" />

        <EditText
                android:id="@+id/energyEditText"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/power_consumption"
                android:inputType="numberDecimal"
                android:text="@string/_200"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hashrateEditText" />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/w"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/hashrateEditText"
                app:layout_constraintTop_toTopOf="@+id/energyEditText" />

        <EditText
                android:id="@+id/energyCostEditText"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/cost_per_kwh"
                android:inputType="numberDecimal"
                android:text="@string/_0_1"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/energyEditText" />

        <TextView
                android:id="@+id/usdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/kwh"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/hashrateEditText"
                app:layout_constraintTop_toTopOf="@+id/energyCostEditText" />


        <TextView
                android:id="@+id/hashTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/h_s"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/hashrateEditText"
                app:layout_constraintTop_toTopOf="@+id/hashrateEditText" />

        <EditText
                android:id="@+id/poolFeeEditText"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/pool_fee"
                android:inputType="numberDecimal"
                android:text="@string/_1"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/energyCostEditText" />

        <TextView
                android:id="@+id/percentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/percent"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/hashrateEditText"
                app:layout_constraintTop_toTopOf="@+id/poolFeeEditText" />

        <Button
                android:id="@+id/calculateButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/calculate_selector"
                android:enabled="false"
                android:text="@string/calculate"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@+id/percentText" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="ca-app-pub-1501215034144631/4742326103"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/calculateButton" />

        <TextView
                android:id="@+id/bottomTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/adViewDashboard" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>