<?xml version="1.0" encoding="utf-8"?>

<ScrollView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >


        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/devicesRecycleAMD"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
        />
        <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:background="@drawable/threedots"
                android:layout_height="wrap_content"
        />

        <ImageView
                android:id="@+id/lineSeparator"
                android:layout_width="match_parent"
                android:background="@drawable/line_razd"
                android:layout_height="wrap_content"
        />

        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
            >

                <TextView
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="@string/build_your_rig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
            >

                <TextView
                        android:id="@+id/rigDeviceCounterAMD"
                        android:textStyle="bold|italic"
                        android:textSize="18sp"
                        android:text="@string/_0_devices"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >


            <LinearLayout
                    android:id="@+id/deviceNameLayoutAMD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
            >


            </LinearLayout>

            <LinearLayout
                    android:id="@+id/deviceCountLayoutAMD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
            >


            </LinearLayout>


        </LinearLayout>

        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/saveRigButtonAMD"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="16dp"
                    android:drawableStart="@drawable/save"
                    android:background="@drawable/clearall_selector"
                    android:text="@string/save_config"
                    android:textStyle="italic"
                    android:textSize="11sp"
                    android:layout_marginEnd="15dp"
                    android:layout_width="105dp"
                    android:layout_height="30dp"
                    tools:ignore="SmallSp" />

            <Button
                    android:id="@+id/loadRigButtonAMD"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    android:drawableStart="@drawable/load"
                    android:background="@drawable/clearall_selector"
                    android:text="@string/load_config"
                    android:textStyle="italic"
                    android:textSize="11sp"
                    android:layout_marginEnd="25dp"
                    android:layout_width="105dp"
                    android:layout_height="30dp"
                    tools:ignore="SmallSp" />

            <Button
                    android:id="@+id/clearRigButtonAMD"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    android:drawableStart="@drawable/close"
                    android:background="@drawable/clearall_selector"
                    android:text="@string/clear_all"
                    android:textStyle="italic"
                    android:textSize="11sp"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    tools:ignore="SmallSp" />


        </LinearLayout>


        <Button
                android:id="@+id/calculateRigButtonAMD"
                android:layout_marginTop="25dp"
                android:background="@drawable/calculate_selector"
                android:text="@string/calculate_rig"
                android:textStyle="italic"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
        />

        <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewAmd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_id"
                ads:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="210dp"
        >
        </com.google.android.gms.ads.AdView>

    </LinearLayout>
</ScrollView>